Fix: Mobile layout improvements and footer alignment
- Left-aligned phone number in footer on mobile
- Consolidated mobile CSS rules
- Fixed aspect ratios in before/after modules
- Improved mobile layout and card styling

--- a/index.html
+++ b/index.html
@@ -937,7 +937,7 @@
         <section class="kr8-before-after-module kr8-ba-anim">
             <div class="kr8-ba-main-intro">
                 <h2 class="kr8-main-headline kr8-black-aura">FROM WEATHERED TO SHOWROOM</h2>
-                <p class="kr8-main-subtext kr8-dark-hover">Drag the handle to see the shift from original condition to prepped, ready-to-finish surfaces. Recycled glass for hard surfaces, organic media for delicate substrates, and wet blasting to keep dust down and details intact.</p>
+                <p class="kr8-main-subtext kr8-dark-hover before-after-desc">Drag the handle to see the shift from original condition to prepped, ready-to-finish surfaces. Recycled glass for hard surfaces, organic media for delicate substrates, and wet blasting to keep dust down and details intact.</p>
             </div>
 
             <div class="kr8-ba-container">
