Mobile & Tablet Optimization: Home and Industrial Pages Complete
## Mobile Optimizations
- Index page: Added 10px top margin to "INDUSTRIAL POWER, SURGICAL PRECISION, AND ECO-FOCUSED MEDIA"
- Index page: Added 10px left padding to eh-intro-panel
- Index page: Updated text padding from 0px to 2px across all elements
- Industrial page: Added 5px padding to safety section rows
- Industrial page: Added 2px padding to eng-card-content text
- Industrial page: Centered "SAFETY IS OUR BASELINE" title on mobile
- Industrial page: Streamlined footer to show only logo and tagline on mobile

## Tablet Optimizations
- Hero text overlay: Fixed positioning to sit at bottom of WebGL/video on all pages
- Updated inline media queries from 991px to 767px to prevent conflicts
- Industrial page: Added 15px margin-top to "REQUEST RATE SHEET" button
- Industrial page: Set safety section padding-top to 69px
- Industrial page: Changed safety section min-height to 61vh
- Industrial page: Footer tagline line break after "Prep," with line-height 1
- Industrial page: Hidden sticky action buttons on tablet

## Cross-Page Updates
- Removed close menu buttons from all navigation menus
- Updated tablet hero layout for consistent text overlay behavior
- Enhanced mobile text readability with proper padding adjustments

All changes maintain responsive design principles and preserve desktop functionality.

--- a/index.html
+++ b/index.html
@@ -246,13 +246,12 @@
             height: 100%;
             object-fit: cover;
         }
-        @media (max-width: 991px) {
+        @media (max-width: 767px) {
             .home-hero,
             .comm-hero,
             .res-hero,
             .ind-hero {
                 display: flex;
-                flex-direction: column-reverse;
             }
             .home-hero-content,
             .comm-hero-content,
@@ -330,7 +329,6 @@
             </a>
 
             <nav class="nav-links nav-light">
-                <div class="menu-close-container"><button class="nav-close-btn" aria-label="Close Menu">✕ CLOSE MENU</button></div>
                 <a href="index.html" class="nav-item active">Home</a>
                 <a href="industrial.html" class="nav-item">Industrial</a>
                 <a href="commercial.html" class="nav-item">Commercial</a>
@@ -1032,7 +1030,10 @@
                 <div class="footer-top">
                     <div>
                         <img src="images/logos/evolvelogo.webp" alt="Evolve Surface Strategies" class="footer-logo" loading="lazy" decoding="async" width="600" height="509">
-                        <p class="footer-tagline">Alberta's Premier Mobile Surface Prep, Steam Washing & Eco-Restoration Services.</p>
+                        <p class="footer-tagline">
+                            <span class="footer-tagline-line">Alberta's Premier Mobile Surface Prep,</span>
+                            <span class="footer-tagline-line">Steam Washing &amp; Eco-Restoration Services.</span>
+                        </p>
                     </div>
                     <button onclick="openBookingModal()" class="footer-cta">GET AN ESTIMATE</button>
                 </div>
