--- a/legal.html
+++ b/legal.html
@@ -366,7 +366,7 @@
         </button>
 
         <a href="index.html" class="logo-link" aria-label="Evolve Surface Strategies">
-            <img src="images/logos/evolvelogo.webp" alt="Evolve Surface Strategies" class="evolve-nav-logo" loading="lazy" decoding="async" width="600" height="509">
+            <img src="images/logos/evolvelogo.webp" alt="Evolve Surface Strategies" class="evolve-nav-logo" decoding="async" width="600" height="509">
         </a>
 
         <nav class="nav-links nav-light">
@@ -382,7 +382,7 @@
             </a>
         </nav>
 
-        <button onclick="openBookingModal()" class="header-cta">GET QUOTE</button>
+        <button onclick="openBookingModal()" class="header-cta">GET A<br>QUOTE</button>
     </header>
     
     <div class="legal-container">
@@ -509,7 +509,7 @@
             <section class="legal-section">
                 <h2>7. CONTACT & DOCUMENTATION REQUESTS</h2>
                 <p>For immediate access to safety documentation, insurance certificates, or compliance materials, please contact:</p>
-                <p><strong>Email:</strong> <a href="mailto:info@evolveprep.com" style="color: var(--lime);">info@evolveprep.com</a><br>
+                <p><strong>Email:</strong> <a href="mailto:info@evolve.contractors" style="color: var(--lime);">info@evolve.contractors</a><br>
                 <strong>Phone:</strong> <a href="tel:7809155471" style="color: var(--lime);">780-915-5471</a></p>
                 
                 <p style="margin-top: 40px; padding-top: 40px; border-top: 1px solid rgba(255,255,255,0.1); font-size: 13px; color: rgba(255,255,255,0.5);">
@@ -549,35 +549,37 @@
 
                 <div class="footer-col">
                     <h5 class="footer-title">CONTACT</h5>
-                        <a href="tel:7809155471" class="footer-link">Phone: 780-915-5471</a>
-                        <a href="mailto:info@evolveprep.com" class="footer-link">Email: info@evolveprep.com</a>
+                    <a href="tel:7809155471" class="footer-link">Phone: 780-915-5471</a>
+                    <a href="mailto:info@evolve.contractors" class="footer-link">Email: info@evolve.contractors</a>
+                </div>
 
                 <div class="footer-col">
                     <h5 class="footer-title">SOCIAL</h5>
                     <div class="footer-social">
-                        <a class="footer-social-link" href="#" aria-label="Facebook">
+                        <a class="footer-social-link" href="#booking-modal" aria-label="Facebook">
                             <svg class="footer-social-icon" viewBox="0 0 24 24"><path d="M12 2.04C6.5 2.04 2 6.53 2 12.06C2 17.06 5.66 21.21 10.44 21.96V14.96H7.9V12.06H10.44V9.85C10.44 7.34 11.93 5.96 14.15 5.96C15.21 5.96 16.12 6.04 16.12 6.04V8.51H15.01C13.77 8.51 13.38 9.28 13.38 10.07V12.06H16.16L15.72 14.96H13.38V21.96C18.16 21.21 21.82 17.06 21.82 12.06C21.82 6.53 17.32 2.04 12 2.04Z"/></svg>
                         </a>
-                        <a class="footer-social-link" href="#" aria-label="Instagram">
+                        <a class="footer-social-link" href="#booking-modal" aria-label="Instagram">
                             <svg class="footer-social-icon" viewBox="0 0 24 24"><path d="M7.8,2H16.2C19.4,2 22,4.6 22,7.8V16.2A5.8,5.8 0 0,1 16.2,22H7.8C4.6,22 2,19.4 2,16.2V7.8A5.8,5.8 0 0,1 7.8,2M7.6,4A3.6,3.6 0 0,0 4,7.6V16.4C4,18.39 5.61,20 7.6,20H16.4A3.6,3.6 0 0,0 20,16.4V7.6C20,5.61 18.39,4 16.4,4H7.6M17.25,5.5A1.25,1.25 0 0,1 18.5,6.75A1.25,1.25 0 0,1 17.25,8A1.25,1.25 0 0,1 16,6.75A1.25,1.25 0 0,1 17.25,5.5M12,7A5,5 0 0,1 17,12A5,5 0 0,1 12,17A5,5 0 0,1 7,12A5,5 0 0,1 12,7M12,9A3,3 0 0,0 9,12A3,3 0 0,0 12,15A3,3 0 0,0 15,12A3,3 0 0,0 12,9Z"/></svg>
                         </a>
-                        <a class="footer-social-link" href="#" aria-label="LinkedIn">
+                        <a class="footer-social-link" href="#booking-modal" aria-label="LinkedIn">
                             <svg class="footer-social-icon" viewBox="0 0 24 24"><path d="M19 3a2 2 0 0 1 2 2v14a2 2 0 0 1-2 2H5a2 2 0 0 1-2-2V5a2 2 0 0 1 2-2h14m-.5 15.5v-5.3a3.26 3.26 0 0 0-3.26-3.26c-.85 0-1.84.52-2.32 1.3v-1.11h-2.79v8.37h2.79v-4.93c0-.77.62-1.4 1.39-1.4a1.4 1.4 0 0 1 1.4 1.4v4.93h2.79M6.88 8.56a1.68 1.68 0 0 0 1.68-1.68c0-.93-.75-1.69-1.68-1.69a1.69 1.69 0 0 0-1.69 1.69c0 .93.76 1.68 1.69 1.68m1.39 9.94v-8.37H5.5v8.37h2.77z"/></svg>
                         </a>
                     </div>
                 </div>
             </div>
+        </div>
 
-            <div class="footer-divider"></div>
+        <div class="footer-divider"></div>
 
             <p class="footer-locations">Serving Fort McMurray, Grande Prairie, Nisku, Leduc, Red Deer & Calgary Industrial Sites.</p>
 
             <div class="footer-bottom">
-                <p class="footer-copy">&copy; 2024 EVOLVE ECO SURFACE PREP &amp; RESTORATION</p>
+                <p class="footer-copy">&copy; 2025 EVOLVE ECO SURFACE PREP &amp; RESTORATION</p>
                 <div class="footer-legal">
                     <a class="footer-link" href="legal.html">PRIVACY</a>
                     <span class="footer-separator">/</span>
-                    <a class="footer-link" href="legal.html">TERMS</a>
+                    <a class="footer-link" href="legal.html">TERMS</a><span class="footer-separator">/</span><a class="footer-link" href="evolve-brand-bible.html">BRAND</a>
                 </div>
             </div>
         </div>
