V1 Complete: Residential Footer Optimization & Final Touches
## Residential Page Tablet Optimization
- Footer tagline: Added line break after "Deck" and before "&" on tablet
- Set line-height to 1 for proper spacing on tablet viewports
- Two-line display: "Specializing in Dustless Driveway, Deck" / "& Hardscape Restoration for Homeowners"

## Global Footer Text Alignment
- Changed footer-tagline text-align from center to left on mobile (style.css line 7581)
- Affects all pages including residential for consistent mobile experience

## V1 Website Complete
- All responsive optimizations implemented across Home, Industrial, Commercial, and Residential pages
- Mobile and tablet layouts fully optimized with proper text alignment, spacing, and breakpoints
- Hero text overlays working correctly on all viewports
- Footer layouts optimized per page requirements

## Future Enhancements (V2+)
- Email integration and API key configuration
- Pseudo-element overlap fixes for videos/WebGL
- Additional mobile optimization based on speed tests
- AI agent for conversation handling and intake improvements
- Form enhancements and automation features
- Client feedback integration and future contract adaptations

Ready for client review and approval. Website V1 functionality complete.

--- a/residential.html
+++ b/residential.html
@@ -1278,6 +1278,18 @@
                 padding: 20px 0 !important;
             }
         }
+        
+        @media (min-width: 768px) and (max-width: 1024px) {
+            .footer-tagline {
+                line-height: 1 !important;
+                white-space: pre-wrap;
+            }
+            
+            .footer-tagline br {
+                display: block;
+                margin: 0;
+            }
+        }
     </style>
 </head>
 <body>
@@ -1724,7 +1736,7 @@
                 <div class="footer-top">
                     <div>
                         <img src="images/logos/evolvelogo.webp" alt="Evolve Surface Strategies" class="footer-logo" loading="lazy" decoding="async" width="600" height="509">
-                        <p class="footer-tagline">Specializing in Dustless Driveway, Deck & Hardscape Restoration for Homeowners.</p>
+                        <p class="footer-tagline">Specializing in Dustless Driveway, Deck<br>& Hardscape Restoration for Homeowners.</p>
                     </div>
                     <button onclick="openBookingModal()" class="footer-cta" style="background: none; border: none; cursor: pointer; font-family: inherit; padding: 0;">GET AN ESTIMATE</button>
                 </div>
