Refresh site metadata, assets, and booking flow

--- a/Evolve/legal.html
+++ b/Evolve/legal.html
@@ -8,9 +8,9 @@
     <meta name="description" content="Terms, privacy, and service policies for EVOLVE ECO SURFACE PREP & RESTORATION.">
     <meta property="og:title" content="EVOLVE ECO SURFACE PREP & RESTORATION | Legal">
     <meta property="og:description" content="Terms, privacy, and service policies for EVOLVE ECO SURFACE PREP & RESTORATION.">
-    <meta property="og:image" content="https://www.evolution.contractors/images/logos/evolvelogo.webp">
+    <meta property="og:image" content="https://www.evolve.contractors/images/logos/evolvelogo.webp">
 
-    <link rel="canonical" href="https://www.evolution.contractors/legal.html">
+    <link rel="canonical" href="https://www.evolve.contractors/legal.html">
 
     <link rel="icon" type="image/x-icon" href="images/logos/favicon.ico">
     <link rel="icon" type="image/webp" href="images/logos/evolvelogo.webp">
@@ -23,8 +23,8 @@
     <link rel="dns-prefetch" href="https://cdnjs.cloudflare.com">
     <link rel="dns-prefetch" href="https://maps.googleapis.com">
     <link rel="dns-prefetch" href="https://maps.gstatic.com">
-    <link rel="preconnect" href="https://www.evolution.contractors" crossorigin>
-    <link rel="dns-prefetch" href="https://www.evolution.contractors">
+    <link rel="preconnect" href="https://www.evolve.contractors" crossorigin>
+    <link rel="dns-prefetch" href="https://www.evolve.contractors">
     <meta name="keywords" content="SSPC Standards, NACE Specifications, Vapor Blasting, Dustless Blasting, Industrial Compliance, OH&S Alberta, Plant Turnarounds, Safety Documentation, FLHA, SDS, Dry Ice Blasting, Mobile Fleet Washing">
     <link rel="preload" as="style" href="assets/css/style.css" onload="this.onload=null;this.rel='stylesheet';document.documentElement.classList.remove('css-loading');document.querySelectorAll('.site-header[data-css-hide]').forEach(function(el){el.style.opacity='';el.style.visibility='';});">
     <noscript><link rel="stylesheet" href="assets/css/style.css"></noscript>
